--- a/DeliveryShop/DeliveryShopView/DeliveryShopView.csproj
+++ b/DeliveryShop/DeliveryShopView/DeliveryShopView.csproj
@@ -264,11 +264,11 @@
     <Compile Include="FormReportClientOrders.Designer.cs">
       <DependentUpon>FormReportClientOrders.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormReportOrders.cs">
+    <Compile Include="FormReportDishMeal.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormReportOrders.Designer.cs">
-      <DependentUpon>FormReportOrders.cs</DependentUpon>
+    <Compile Include="FormReportDishMeal.Designer.cs">
+      <DependentUpon>FormReportDishMeal.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -297,8 +297,8 @@
     <EmbeddedResource Include="FormReportClientOrders.resx">
       <DependentUpon>FormReportClientOrders.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormReportOrders.resx">
-      <DependentUpon>FormReportOrders.cs</DependentUpon>
+    <EmbeddedResource Include="FormReportDishMeal.resx">
+      <DependentUpon>FormReportDishMeal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
