--- a/DeliveryShop/DeliveryShopRestApi/DeliveryShopRestApi.csproj
+++ b/DeliveryShop/DeliveryShopRestApi/DeliveryShopRestApi.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DeliveryShopBusinessLogic\DeliveryShopBusinessLogic.csproj" />
     <ProjectReference Include="..\DeliveryShopDataBaseImplement\DeliveryShopDataBaseImplement.csproj" />
   </ItemGroup>
