--- a/DeliveryShop/DeliveryShopBusinessLogic/DeliveryShopBusinessLogic.csproj
+++ b/DeliveryShop/DeliveryShopBusinessLogic/DeliveryShopBusinessLogic.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.10.1" />
+    <PackageReference Include="MailKit" Version="2.9.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.10.0" />
